# open-wearables

./: .coderabbit.yaml  .copier-answers.yml  .env.fly.backend.local.example  .env.fly.flower.local.example  .env.fly.frontend.local.example  .env.fly.local.example  .env.fly.svix.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY-FLY.md  FORK-DELTA.md  Makefile  PINOKIO.md  README.md  TEST-EVIDENCE-PR1109.md  configure.js  deploy.ts  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.backup  healthion_mini.json  install.js  justfile  logs.js  open-wearables.code-workspace  pinokio.js  pyproject.toml  reset.js  setup.cfg  start.js  stop.js  test-ultrahuman-integration.md  uninstall.js  upload_xml.py
agent/: Dockerfile  README.md  pyproject.toml
agent/app/: config.py  database.py  main.py  mappings.py  middlewares.py
agent/app/agent/: deps.py
agent/app/api/: __init__.py
agent/app/models/: __init__.py  chat_session.py  conversation.py  message.py
agent/app/repositories/: __init__.py  chat_session.py  conversation.py  message.py  repositories.py
agent/app/schemas/: __init__.py  agent.py  chat.py  common.py  conversation.py  language.py  message.py  session.py
agent/app/services/: __init__.py  chat_session.py  conversation.py  services.py
agent/app/utils/: auth.py  config_utils.py  exceptions.py  hateoas.py  healthcheck.py  mappings_meta.py
agent/config/: .env.example
agent/migrations/: env.py
agent/migrations/versions/: 8d7d4c1a725d_initial_schema.py
agent/scripts/healthchecks/: db_up_check.py
agent/scripts/postgres/: ensure_db.py  init.sh
agent/scripts/start/: app.sh  beat.sh  flower.sh  worker.sh
agent/tests/: conftest.py  factories.py
agent/tests/agent/: conftest.py  test_stats_tools.py  test_tool_registry.py  test_tools.py  test_workflow.py
agent/tests/repositories/: test_conversation_repository.py  test_message_repository.py  test_session_repository.py
agent/tests/services/: test_conversation_service.py
agent/tests/tasks/: test_conversation_lifecycle.py
backend/: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  fly.toml  pyproject.toml  railway.json
backend/.cursor/rules/: architecture.mdc  models.mdc  repositories.mdc  routes.mdc  routes_routers.mdc  schemas.mdc  services.mdc
backend/_tests/: conftest.py
backend/_tests/integrations/: test_apple_import.py  test_apple_sdk_import.py  test_garmin_import.py  test_polar_import.py  test_provider_oauth.py  test_suunto_import.py
backend/_tests/providers/: conftest.py  test_provider_factory.py
backend/_tests/repositories/: test_api_key_repository.py  test_application_repository.py  test_data_point_series_repository.py  test_developer_repository.py  test_device_type_priority_repository.py  test_event_record_detail_repository.py  test_event_record_repository.py  test_provider_settings_repository.py  test_refresh_token_repository.py  test_user_connection_repository.py  test_user_repository.py
backend/_tests/schemas/: test_provider_name.py  test_schema_validation.py
backend/_tests/services/: test_api_key_service.py  test_application_service.py  test_developer_service.py  test_event_record_service.py  test_priority_service.py  test_provider_settings_service.py  test_refresh_token_service.py  test_system_info_service.py  test_time_series_service.py  test_user_connection_service.py  test_user_invitation_code_service.py  test_user_service.py
backend/_tests/tasks/: test_periodic_sync_task.py  test_poll_sqs_task.py  test_process_apple_upload_task.py  test_process_upload_task.py  test_sync_vendor_data_task.py
backend/_tests/utils_tests/: test_auth_utils.py  test_conversion.py  test_sdk_auth.py
backend/app/: __init__.py  celery_test.py  config.py  database.py  main.py  mappings.py  middlewares.py
backend/app/algorithms/: config_algorithms.py  recovery.py  scoring_primitives.py  sleep.py  utils.py
backend/app/api/: __init__.py
backend/app/constants/: devices.py  google_health_endpoints.py  health_scores.py  provider_coverage.py  series_types.py  sleep.py  workout_segments.py
backend/app/integrations/: google_auth.py  redis_client.py  sentry.py  sync_events.py  task_dispatcher.py
backend/app/models/: __init__.py  active_energy.py  api_key.py  app_setting.py  application.py  archival_setting.py  data_point_series.py  data_point_series_archive.py  data_source.py  developer.py  device.py  device_software.py  device_type_priority.py  event_record.py  event_record_detail.py  external_device_mapping.py  health_score.py  heart_rate_data.py  heart_rate_recovery.py  invitation.py  meal_details.py  measurement_details.py  menstrual_cycle_details.py  metadata_entry.py  personal_record.py  provider_priority.py  provider_setting.py  record.py  refresh_token.py  series_type_definition.py  sleep_detail.py  sleep_details.py  summaries.py  telemetry_state.py  user.py  user_connection.py  user_invitation_code.py  version.py  workout.py  workout_detail.py  (+2 more)
backend/app/repositories/: __init__.py  application_repository.py  archival_repository.py  repositories.py  (+21 more)
backend/config/: .env.dev.example  .env.example  .env.local  .env.local.template
backend/docs/: health_data_open_api_rfc.yml
backend/load_tests/: locustfile.py  settings.py
backend/mcp_server/: __init__.py  __main__.py  config.py  server.py
backend/migrations/: env.py
backend/scripts/: backfill_garmin_sleep_end_datetime.py  generate_coverage_docs.py  generate_healthkit_payload.py  init_provider_settings.py  manual_test_sensorbio_app.py  replay_raw_payloads.py  sensorbio_integration_tester.py  verify_ultrahuman_integration.py
backend/tests/: conftest.py  factories.py  test_healthz.py  test_smoke.py
mcp/: Dockerfile  README.md  pyproject.toml
mcp/app/: __init__.py  auth.py  config.py  main.py  prompts.py  utils.py
mcp/config/: .env.example
mcp/tests/: __init__.py  conftest.py  test_api_client.py  test_tools.py
sdk/python/: README.md  pyproject.toml
(+1476 files in other folders)
