[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-wearables"
version = "0.1.0"
description = "Python SDK for the Open Wearables API - Access fitness and health data from wearable devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Open Wearables Contributors" }
]
keywords = [
    "wearables",
    "fitness",
    "health",
    "api",
    "sdk",
    "garmin",
    "apple-health",
    "polar",
    "suunto",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic[email]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/TudorGR/open-wearables"
Documentation = "https://docs.openwearables.io"
Repository = "https://github.com/TudorGR/open-wearables"
Issues = "https://github.com/TudorGR/open-wearables/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_wearables"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
